[package]
name = "pgnation"
description = "Pagination implementation for PostgreSQL using SQLx and CTE."
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]
homepage = "https://github.com/jonathanblade/pgnation"
repository = "https://github.com/jonathanblade/pgnation"

keywords = ["sqlx", "postgres", "pagination"]
categories = ["database", "asynchronous"]

[dependencies]
sqlx = { version = "0.6.2", default-features = false }

[dev-dependencies]
sqlx = { version = "0.6.2", default-features = false, features = ["macros", "migrate"] }

[features]
default = ["runtime-tokio-native-tls", "postgres"]

# Backend
postgres = ["sqlx/postgres"]

# Runtime
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]
